Add to one end (when become idle) and take from the other (when need a thread). Otherwise threads will never timeout.
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@14635 67a373e5-eb02-0410-a15c-ee090a768436